# Autonomous-Solar-System

./: .gitignore  Docker Commands.txt  Dockerfile  README.md  Script.txt  start_kos.sh  start_opencv.sh
shared/: CMakeLists.txt  cross-build.sh  kos-init.sh
shared/client/: CMakeLists.txt
shared/client/src/: generator.cpp  generator.h  main.cpp
shared/common/: SocketsExchanger.cpp  SocketsExchanger.h  generatorEntity.h
shared/entity/: SocketsExchanger.h  SocketsExchenger.cpp  generatorEntity.h
shared/kos_udp/: README.md  cross-build.sh  expected_output
shared/kos_udp/client/: CMakeLists.txt
shared/kos_udp/client/src/: client.cpp
shared/kos_udp/common/: SocketsExchanger.h
shared/kos_udp/server/: CMakeLists.txt
shared/kos_udp/server/src/: server.cpp
shared/server/: CMakeLists.txt
shared/server/src/: camera.cpp  camera.h  event.cpp  event.h  generator.cpp  generator.h  main.cpp  system.cpp  system.h
